--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.27.2",
     "bulma": "^0.9.4",
     "classnames": "^2.3.1",
-    "next": "latest",
+    "next": "^12.3.4",
     "next-redux-wrapper": "^8.0.0",
     "node-sass": "^7.0.3",
     "qs": "^6.11.0",
